<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/titulo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textSize="32sp"
		android:layout_marginTop="20dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintVertical_bias=".43"
		>
		<Button
			android:id="@+id/cadastrarAluno"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:text="@string/registerStudent"
			android:textColor="@android:color/white"
			android:textAllCaps="false"
			android:backgroundTint="@android:color/holo_blue_dark"
			/>

		<Button
			android:id="@+id/cadastrarProfessor"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:text="@string/registerTeacher"
			android:textColor="@android:color/white"
			android:textAllCaps="false"
			android:backgroundTint="@android:color/holo_blue_dark"
			/>

		<Button
			android:id="@+id/verCadastros"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:text="@string/seeRegisters"
			android:textColor="@android:color/white"
			android:textAllCaps="false"
			android:backgroundTint="@android:color/holo_blue_dark"
			/>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
