<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<TextView
		android:id="@+id/id"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:text="ID: "
		android:textSize="22sp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		/>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/nome"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginTop="20dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/id"
		>
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/nomeInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:hint="@string/name"
			/>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/endereco"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginTop="5dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/nome"
		>
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/enderecoInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:hint="@string/address"
			/>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/numero"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginTop="5dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/endereco"
		>
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/numeroInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="phone"
			android:hint="@string/phoneNumber"
			/>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/cidade"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginTop="5dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/numero"
		>
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/cidadeInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:hint="@string/city"
			/>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/cep"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginTop="5dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/cidade"
		>
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/cepInput"
			android:inputType="number"
			android:digits="0123456789-"
			android:hint="@string/zip"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/estado"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginTop="5dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/cep"
		>
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/estadoInput"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:hint="@string/state"
			/>
	</com.google.android.material.textfield.TextInputLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		app:layout_constraintTop_toBottomOf="@id/estado"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:gravity="center"
		>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:background="@drawable/gradient"
			android:gravity="center"
			>
			<Button
				android:id="@+id/salvar"
				android:layout_width="120dp"
				android:layout_height="wrap_content"
				android:text="@string/save"
				android:textColor="@android:color/white"
				android:insetTop="0dp"
				android:insetBottom="0dp"
				android:minWidth="0dp"
				android:minHeight="0dp"
				android:padding="0dp"
				style="?android:attr/borderlessButtonStyle"
				/>
		</LinearLayout>

		<Button
			android:id="@+id/limpar"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_marginStart="10dp"
			android:text="×"
			android:textSize="24sp"
			android:hint="@string/clear"
			android:textColor="@android:color/white"
			android:backgroundTint="@android:color/holo_red_dark"
			android:insetTop="0dp"
			android:insetBottom="0dp"
			android:minWidth="0dp"
			android:minHeight="0dp"
			android:padding="0dp"
			/>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
